# ChangeLog for sys-kernel/git-sources
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.92 2007/07/22 10:36:18 phreak Exp $

*git-sources-2.6.22-r17 (22 Jul 2007)

  22 Jul 2007; Christian Heim <phreak@gentoo.org>
  +git-sources-2.6.22-r17.ebuild:
  Bump.

*git-sources-2.6.22-r16 (21 Jul 2007)

  21 Jul 2007; Christian Heim <phreak@gentoo.org>
  +git-sources-2.6.22-r16.ebuild:
  Bump.

*git-sources-2.6.22-r6 (16 Jul 2007)

  16 Jul 2007; Christian Heim <phreak@gentoo.org>
  +git-sources-2.6.22-r6.ebuild:
  Version bump, 2.6.22-git6.

*git-sources-2.6.22-r5 (16 Jul 2007)

  16 Jul 2007; Robin H. Johnson <robbat2@gentoo.org>
  +git-sources-2.6.22-r5.ebuild:
  Bump.

*git-sources-2.6.22-r4 (14 Jul 2007)

  14 Jul 2007; Christian Heim <phreak@gentoo.org>
  +git-sources-2.6.22-r4.ebuild:
  Revision bump, we're at -git4 right now.

*git-sources-2.6.22-r1 (10 Jul 2007)

  10 Jul 2007; Christian Heim <phreak@gentoo.org>
  -git-sources-2.6.22_rc1-r5.ebuild, -git-sources-2.6.22_rc3.ebuild,
  -git-sources-2.6.22_rc4-r6.ebuild, -git-sources-2.6.22_rc6.ebuild,
  +git-sources-2.6.22-r1.ebuild:
  Removing most of the older versions, leaving the latest 2.6.22_rc*-git
  around, adding 2.6.22-git1.

  10 Jul 2007; Christian Heim <phreak@gentoo.org>
  -git-sources-2.6.21-r2.ebuild, -git-sources-2.6.22_rc1-r4.ebuild,
  -git-sources-2.6.22_rc4.ebuild, -git-sources-2.6.22_rc4-r3.ebuild,
  -git-sources-2.6.22_rc7.ebuild, -git-sources-2.6.22_rc7-r5.ebuild:
  Cleaning up some oldish versions.

*git-sources-2.6.22_rc7-r8 (08 Jul 2007)

  08 Jul 2007; Christian Heim <phreak@gentoo.org>
  +git-sources-2.6.22_rc7-r8.ebuild:
  Revision bump, only for armin76.

*git-sources-2.6.22_rc7-r5 (06 Jul 2007)

  06 Jul 2007; Christian Heim <phreak@gentoo.org>
  +git-sources-2.6.22_rc7-r5.ebuild:
  Revision bump, latest (today - 06.07.07) git snapshot.

*git-sources-2.6.22_rc7 (02 Jul 2007)