@@ -11,6 +11,7 @@ DIST patch-2.6.22-git5.bz2 1888707 RMD160 8075e49b88c9d44a20b46c9057444940ca465a
 DIST patch-2.6.22-git6.bz2 2448071 RMD160 f85fe9cf02afea77d4fed3ea33e3d07c43fb7166 SHA1 9b2ea4b2f893fc099f277e5597f551ebff25993f SHA256 9a98c8df1f3cba1cd2dc15389d4358045bb40eeb237bf004d82334f8840c684d
 DIST patch-2.6.22-rc7-git8.bz2 66392 RMD160 9e9d58a1a6e3789b256aecf48a00c644120c9aa2 SHA1 1db26083fea470dbfd0358d50ce6330ab51786be SHA256 966dc9bab3afed0a69d4ba7988632af54a9ef145d7eb8b36e41a2810d8056d3d
 DIST patch-2.6.22-rc7.bz2 6185957 RMD160 d7f233059163f027339c3a0a8e9caa16f4b501ef SHA1 27611261f5462e8e3fecf691fd7a43c5a5e5717c SHA256 b29995d18cc2cf798f87115c84ea1fb501dded4657e47a2c26763827be297342
+DIST patch-2.6.23-rc1.bz2 5036466 RMD160 6c89140dc220be075487d6ff9252559b08ff9590 SHA1 730d9539f3a10504aa69a33fb672b295528f932b SHA256 93561528e0ee2b142f23216667c8cda378f4de0d2075113e30a35e11a3bbaa7a
 EBUILD git-sources-2.6.22-r1.ebuild 1232 RMD160 e3384d0e8ba1b51bda2b4de61ac43f80d6f7708a SHA1 16fec71c7411f4f44c22fad14aff07fa291c02a2 SHA256 d0c82ac13d2aa7326f486fcb0764b1c2f0dccdee94853c3651ea5be8aa99faad
 MD5 3cc6393856750aea3bdf16a48e601c1e git-sources-2.6.22-r1.ebuild 1232
 RMD160 e3384d0e8ba1b51bda2b4de61ac43f80d6f7708a git-sources-2.6.22-r1.ebuild 1232
@@ -39,10 +40,14 @@ EBUILD git-sources-2.6.22_rc7-r8.ebuild 1236 RMD160 e5f29864e82b799aefb6ac44a89a
 MD5 bb51f06cccc30f872e02c47a50544f77 git-sources-2.6.22_rc7-r8.ebuild 1236
 RMD160 e5f29864e82b799aefb6ac44a89a76f35912638d git-sources-2.6.22_rc7-r8.ebuild 1236
 SHA256 86ab960bba6ed02fa49e2592664ccbfdff0c8a9926a02f2ae9cc8985f2e316fd git-sources-2.6.22_rc7-r8.ebuild 1236
-MISC ChangeLog 18216 RMD160 87e93ca3f041f555dc2360ed46d3762794443a33 SHA1 56c7b90374844f6b6f2e69873dfa38c42e4bab0b SHA256 07b5fbd983e2a78872ce6a785ce80d4160a5b57bbf24a81978d3c7fbc6801b26
-MD5 3f1a1dd128e6cc52206ace7f385b50af ChangeLog 18216
-RMD160 87e93ca3f041f555dc2360ed46d3762794443a33 ChangeLog 18216
-SHA256 07b5fbd983e2a78872ce6a785ce80d4160a5b57bbf24a81978d3c7fbc6801b26 ChangeLog 18216
+EBUILD git-sources-2.6.23_rc1.ebuild 1230 RMD160 98326a073ad26682c1ee53af1c0d97a0fa1dd92c SHA1 3a7f62ef6de49ddb6121f6324740f5d87720a64f SHA256 1be6c2cd11fb9152f8a0bef6ad2acc554835e45a50d879e1db4c9c379ec6bef6
+MD5 1c64121b6e313aa41f3b95f4d4545eef git-sources-2.6.23_rc1.ebuild 1230
+RMD160 98326a073ad26682c1ee53af1c0d97a0fa1dd92c git-sources-2.6.23_rc1.ebuild 1230
+SHA256 1be6c2cd11fb9152f8a0bef6ad2acc554835e45a50d879e1db4c9c379ec6bef6 git-sources-2.6.23_rc1.ebuild 1230
+MISC ChangeLog 18348 RMD160 85a1f91dcbc9e5e5371aa9fca766327c52817dd8 SHA1 de1e77b640e6d33e19d237c1b7c1c58c253b1441 SHA256 b4b6882fa72650fb75edfbfaf92d4af852581e2799680c3d811b71974bb9ce04
+MD5 c6eb9b08064b1cf6934cfca945348957 ChangeLog 18348
+RMD160 85a1f91dcbc9e5e5371aa9fca766327c52817dd8 ChangeLog 18348
+SHA256 b4b6882fa72650fb75edfbfaf92d4af852581e2799680c3d811b71974bb9ce04 ChangeLog 18348
 MISC metadata.xml 449 RMD160 d294fadd32041f41f221d9c50a04cba964d56d2a SHA1 23042103b1ded51439d907767fe19fbde8834cf6 SHA256 5ba3a4038eb9f870f3fcc1d67c223efda046210a313bd4c0ffff7fb382e7e2d0
 MD5 8ca405b8c53bdbeb5e1c6e981420b315 metadata.xml 449
 RMD160 d294fadd32041f41f221d9c50a04cba964d56d2a metadata.xml 449
@@ -68,10 +73,13 @@ SHA256 304706bc15b6738cd8f49d1ebeac108df15b50b1b5a8fda15273172e9ca0c51c files/di
 MD5 2afbd38371e9d7cd7a661d65b345c529 files/digest-git-sources-2.6.22_rc7-r8 744
 RMD160 912378e3361a49094e933f99fe3fe73a90b5bce3 files/digest-git-sources-2.6.22_rc7-r8 744
 SHA256 e7f854c51301fbc03a0da1cca4867a1aae129fd4124a618c4ca58c31dcb75a8f files/digest-git-sources-2.6.22_rc7-r8 744
+MD5 f17a7c8eec8f4c836989560e5ea28ab2 files/digest-git-sources-2.6.23_rc1 491
+RMD160 432a43f60abcddec6ebb817cb76f5917704560f3 files/digest-git-sources-2.6.23_rc1 491
+SHA256 1c5730d89e494198206ca2d6397ef67892143aba2daee26340d2a19e960a0507 files/digest-git-sources-2.6.23_rc1 491
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.5 (GNU/Linux)
 
-iD8DBQFGozMmyuNVb5qfaOYRAgEwAJ92o//1zvLSFpcn81a/8qYFzhP5bgCfVbx5
-oqu6ZmONkA9EEiP3F1eIH2o=
-=AwnW
+iD8DBQFGpKZqyuNVb5qfaOYRAgo7AKCK58BcFeUk+k4mDZdcCD675lIm0ACfcrCQ
+SH9T+srUPMZR3/ArvCZXikM=
+=vZ7b
 -----END PGP SIGNATURE-----
