@@ -1,0 +1,6 @@
+MD5 2e230d005c002fb3d38a3ca07c0200d0 linux-2.6.22.tar.bz2 45119878
+RMD160 c4b2ca5ee8e71c0f8f1c95f3c9c5f261f2785912 linux-2.6.22.tar.bz2 45119878
+SHA256 73c10604c53f1a6ee65ef805293d23903696f8cef864f42d7de9506f0d2ba4c7 linux-2.6.22.tar.bz2 45119878
+MD5 e49b373ede3e8449cf9b1e17bb685110 patch-2.6.23-rc1.bz2 5036466
+RMD160 6c89140dc220be075487d6ff9252559b08ff9590 patch-2.6.23-rc1.bz2 5036466
+SHA256 93561528e0ee2b142f23216667c8cda378f4de0d2075113e30a35e11a3bbaa7a patch-2.6.23-rc1.bz2 5036466
