@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.92 2007/07/22 10:36:18 phreak Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.93 2007/07/23 13:00:20 phreak Exp $
+
+*git-sources-2.6.23_rc1 (23 Jul 2007)
+
+  23 Jul 2007; Christian Heim <phreak@gentoo.org>
+  +git-sources-2.6.23_rc1.ebuild:
+  Bump.
 
 *git-sources-2.6.22-r17 (22 Jul 2007)
 
